fixed text in tweets that did not wrap

--- a/src/components/TweetCard/TweetCard.module.css
+++ b/src/components/TweetCard/TweetCard.module.css
@@ -1,4 +1,5 @@
 .container {
+  width: 568px;
   padding: 0px 15px;
   border-bottom: 1px solid rgb(230, 236, 240);
 }
@@ -15,6 +16,9 @@
 .avatar {
   width: 49px;
   margin-right: 10px;
+}
+.avatar img {
+  width: 49px;
 }
 
 .icons {
@@ -43,4 +47,10 @@
 .userName {
   color: rgb(200, 200, 200);
   font-size: 14px;
+}
+
+@media (max-width: 690px) {
+  .container {
+    width: auto;
+  }
 }
